[package]
name = "distance-latlong"
authors = ["David Flanagan <david@rawkode.dev>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
haversine = "0.2.1"
# General-purpose crate with common HTTP types.
http = "0.2"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.7.0" }
unit-conversions = "0.1.13"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
